# splunkagent

./: .gitignore  README.md  REQUIREMENTS_MATRIX.md  TASKS.md  configuration.toml  pyproject.toml
diagrams/: component-diagram.mmd
docs/: architecture-stack-decision.md
logs/: iteration-1.md
src/splunkagent/: __init__.py
src/splunkagent/tools/: __init__.py
tests/: __init__.py
